--- a/login.html
+++ b/login.html
@@ -82,6 +82,8 @@
   <!-- Footer -->
   <footer class="mt-10 text-xs text-gray-400">
     © 2025 Lizfar DZ — كل الحقوق محفوظة
-  </footer>
+ </footer>
+<script type="module" src="firebase-config.js"></script>
 </body>
 </html>
+
