--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,9 @@
       border: 1px solid rgba(255,255,255,0.1);
       color: white;
     }
+    select option {
+      color: black;
+    }
     input::placeholder { color: rgba(255,255,255,0.4); }
   </style>
 </head>
@@ -55,24 +58,76 @@
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
+      <!-- قائمة ولايات الجزائر -->
       <div>
-        <label class="block text-sm mb-1">مكان الإقامة</label>
-        <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-          <option>الجزائر العاصمة</option>
-          <option>وهران</option>
-          <option>سطيف</option>
-          <option>قسنطينة</option>
-          <option>تلمسان</option>
-          <option>باتنة</option>
-          <option>ورقلة</option>
-          <option>عنابة</option>
+        <label class="block text-sm mb-1">مكان الإقامة (الولاية)</label>
+        <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400 text-black bg-white">
+          <option value="">اختر ولايتك</option>
+          <option>01 - أدرار</option>
+          <option>02 - الشلف</option>
+          <option>03 - الأغواط</option>
+          <option>04 - أم البواقي</option>
+          <option>05 - باتنة</option>
+          <option>06 - بجاية</option>
+          <option>07 - بسكرة</option>
+          <option>08 - بشار</option>
+          <option>09 - البليدة</option>
+          <option>10 - البويرة</option>
+          <option>11 - تمنراست</option>
+          <option>12 - تبسة</option>
+          <option>13 - تلمسان</option>
+          <option>14 - تيارت</option>
+          <option>15 - تيزي وزو</option>
+          <option>16 - الجزائر العاصمة</option>
+          <option>17 - الجلفة</option>
+          <option>18 - جيجل</option>
+          <option>19 - سطيف</option>
+          <option>20 - سعيدة</option>
+          <option>21 - سكيكدة</option>
+          <option>22 - سيدي بلعباس</option>
+          <option>23 - عنابة</option>
+          <option>24 - قالمة</option>
+          <option>25 - قسنطينة</option>
+          <option>26 - المدية</option>
+          <option>27 - مستغانم</option>
+          <option>28 - المسيلة</option>
+          <option>29 - معسكر</option>
+          <option>30 - ورقلة</option>
+          <option>31 - وهران</option>
+          <option>32 - البيض</option>
+          <option>33 - إليزي</option>
+          <option>34 - برج بوعريريج</option>
+          <option>35 - بومرداس</option>
+          <option>36 - الطارف</option>
+          <option>37 - تندوف</option>
+          <option>38 - تيسمسيلت</option>
+          <option>39 - الوادي</option>
+          <option>40 - خنشلة</option>
+          <option>41 - سوق أهراس</option>
+          <option>42 - تيبازة</option>
+          <option>43 - ميلة</option>
+          <option>44 - عين الدفلى</option>
+          <option>45 - النعامة</option>
+          <option>46 - عين تموشنت</option>
+          <option>47 - غرداية</option>
+          <option>48 - غليزان</option>
+          <option>49 - تيميمون</option>
+          <option>50 - برج باجي مختار</option>
+          <option>51 - أولاد جلال</option>
+          <option>52 - بني عباس</option>
+          <option>53 - إن صالح</option>
+          <option>54 - إن قزام</option>
+          <option>55 - تقرت</option>
+          <option>56 - جانت</option>
+          <option>57 - المغير</option>
+          <option>58 - المنيعة</option>
         </select>
       </div>
 
       <div>
         <label class="block text-sm mb-1">العمر</label>
         <input id="age" type="number" min="10" max="99" placeholder="عمرك"
-               class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+               class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400 text-black bg-white">
       </div>
 
       <button type="submit"
@@ -91,10 +146,8 @@
   </footer>
 
   <!-- Firebase -->
-  <script type="module" src="firebase-config.js"></script>
-
-  <!-- Signup Script -->
   <script type="module">
+    import { auth, db } from "./firebase-config.js";
     import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
     import { setDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
@@ -108,6 +161,11 @@
       const password = form.querySelector("#password").value.trim();
       const location = form.querySelector("#wilaya").value;
       const age = form.querySelector("#age").value;
+
+      if (!name || !email || !password || !location || !age) {
+        alert("⚠️ يرجى ملء جميع الخانات");
+        return;
+      }
 
       try {
         const userCredential = await createUserWithEmailAndPassword(auth, email, password);
