--- a/login.html
+++ b/login.html
@@ -38,8 +38,8 @@
 
     <form class="space-y-4">
       <div>
-        <label class="block text-sm mb-1">البريد الإلكتروني أو رقم الهاتف</label>
-        <input id="email" type="text" placeholder="example@gmail.com أو 0550xxxxxx"
+        <label class="block text-sm mb-1">البريد الإلكتروني</label>
+        <input id="email" type="email" placeholder="example@gmail.com"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
@@ -66,13 +66,19 @@
   </footer>
 
   <!-- Firebase -->
-  <script type="module" src="firebase-config.js"></script>
-
-  <!-- Login Script -->
   <script type="module">
-    import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { auth } from "./firebase-config.js";
+    import { signInWithEmailAndPassword, onAuthStateChanged } 
+      from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
     const form = document.querySelector("form");
+
+    // ✅ إذا المستخدم مسجل دخول من قبل → نرسله للملف الشخصي مباشرة
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        window.location.href = "profile.html";
+      }
+    });
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -83,7 +89,7 @@
       try {
         await signInWithEmailAndPassword(auth, email, password);
         alert("✅ تم تسجيل الدخول بنجاح!");
-        window.location.href = "index.html";
+        window.location.href = "profile.html";
       } catch (error) {
         alert("❌ خطأ في تسجيل الدخول: " + error.message);
       }
@@ -91,4 +97,3 @@
   </script>
 </body>
 </html>
-
