--- a/signup.html
+++ b/signup.html
@@ -16,14 +16,12 @@
                         linear-gradient(120deg, rgba(255,255,255,0.03), transparent 10%);
     }
     input, select {
-      background-color: rgba(255,255,255,0.08);
-      border: 1px solid rgba(255,255,255,0.1);
+      background-color: rgba(255,255,255,0.12);
+      border: 1px solid rgba(255,255,255,0.15);
       color: white;
     }
-    select option {
-      color: black;
-    }
-    input::placeholder { color: rgba(255,255,255,0.4); }
+    select option { color: black; }
+    input::placeholder { color: rgba(255,255,255,0.6); }
   </style>
 </head>
 
@@ -36,7 +34,7 @@
   </div>
 
   <!-- Signup Box -->
-  <div class="w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl" id="signupBox">
+  <div class="w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl">
     <h2 class="text-xl font-semibold mb-6 text-center">إنشاء حساب جديد</h2>
 
     <form class="space-y-4">
@@ -58,25 +56,91 @@
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
+      <!-- قائمة الولايات -->
       <div>
         <label class="block text-sm mb-1">مكان الإقامة (الولاية)</label>
-        <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400 text-black bg-white">
+        <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
           <option value="">اختر ولايتك</option>
           <option>01 - أدرار</option>
+          <option>02 - الشلف</option>
           <option>16 - الجزائر العاصمة</option>
           <option>31 - وهران</option>
           <option>19 - سطيف</option>
-          <option>23 - عنابة</option>
           <option>25 - قسنطينة</option>
-          <option>06 - بجاية</option>
-          <option>07 - بسكرة</option>
-          <option>09 - البليدة</option>
+          <option>23 - عنابة</option>
+          <option>18 - جيجل</option>
           <option>47 - غرداية</option>
           <option>48 - غليزان</option>
-          <!-- يمكنك ترك القائمة الطويلة لو أحببت -->
+          <!-- يمكنك إضافة باقي الولايات -->
         </select>
       </div>
 
       <div>
         <label class="block text-sm mb-1">العمر</label>
-        <input id="age" type="number" min="10" max="99" placeho
+        <input id="age" type="number" min="10" max="99" placeholder="عمرك"
+               class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      </div>
+
+      <button type="submit"
+              class="w-full py-2 bg-yellow-400 text-black rounded-lg font-semibold hover:bg-yellow-300 transition">
+        أنشئ حسابي في Lizfar DZ
+      </button>
+    </form>
+
+    <p class="text-center text-sm mt-3">
+      لديك حساب؟ <a href="login.html" class="text-yellow-400 hover:underline">تسجيل الدخول</a>
+    </p>
+  </div>
+
+  <footer class="mt-10 text-xs text-gray-400">
+    © 2025 Lizfar DZ — كل الحقوق محفوظة
+  </footer>
+
+  <!-- Firebase -->
+  <script type="module">
+    import { auth, db } from "./firebase-config.js";
+    import { createUserWithEmailAndPassword, sendEmailVerification } 
+      from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { setDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+
+    const form = document.querySelector("form");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const name = form.querySelector("#fullname").value.trim();
+      const email = form.querySelector("#email").value.trim();
+      const password = form.querySelector("#password").value.trim();
+      const location = form.querySelector("#wilaya").value;
+      const age = form.querySelector("#age").value;
+
+      if (!name || !email || !password || !location || !age) {
+        alert("⚠️ يرجى ملء جميع الخانات");
+        return;
+      }
+
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+
+        // حفظ البيانات في Firestore
+        await setDoc(doc(db, "users", user.uid), {
+          name,
+          email,
+          location,
+          age,
+          createdAt: new Date()
+        });
+
+        // إرسال رسالة تحقق بالبريد الإلكتروني
+        await sendEmailVerification(user);
+        alert("✅ تم إنشاء الحساب! تحقق من بريدك الإلكتروني لتفعيل الحساب.");
+
+        window.location.href = "login.html";
+      } catch (error) {
+        alert("❌ حدث خطأ: " + error.message);
+      }
+    });
+  </script>
+</body>
+</html>
